# openlr-decoder

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  mkdocs.yml  pyproject.toml  tags
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api-reference.md  changelog.md  concepts.md  configuration.md  getting-started.md  index.md  llms-full.txt  llms.txt  preparing-network-data.md  troubleshooting.md
python/openlr_decoder/: __init__.py
qa/: benchmark.py
src/: candidates.rs  decoder.rs  graph.rs  lib.rs  loader.rs  python.rs  spatial.rs  test_utils.rs
tests/: parallel_roads.rs
