[package]
name = "openlr_decoder"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Fast OpenLR location reference decoder"
repository = "https://github.com/replicahq/openlr-decoder"
keywords = ["openlr", "location", "gis", "map-matching"]

[lib]
name = "openlr_decoder"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
openlr = "0.4"
petgraph = "0.6"
rstar = "0.12"
geo = { version = "0.28", features = ["serde"] }
geo-types = { version = "0.7", features = ["serde"] }
parquet = { version = "57", features = ["arrow"] }
arrow = { version = "57", features = ["ffi"] }
geozero = { version = "0.14", features = ["with-wkb", "with-wkt", "with-geo"] }
geoarrow-array = "0.7"
geoarrow-schema = "0.7"
geo-traits = "0.3"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
pyo3-arrow = { version = "0.15", optional = true }

[features]
default = []
python = ["pyo3", "pyo3-arrow"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
