[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openlr-decoder"
version = "0.1.9"
description = "Fast OpenLR location reference decoder for Python"
license = { text = "MIT" }
authors = [{ name = "Replica", email = "engineering@replicahq.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/replicahq/openlr-decoder"
Repository = "https://github.com/replicahq/openlr-decoder"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "openlr_decoder._openlr_decoder"
